deploy/aliyun/ack/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knowhere
  labels:
    name: knowhere
    environment: ${ENVIRONMENT}
