deploy/aliyun/ack/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowhere-api
  namespace: ${NAMESPACE}
  labels:
    app: knowhere-api
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-id: "${API_SLB_ID}"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-force-override-listeners: "false"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5005
    protocol: TCP
    name: http
  - port: 443
    targetPort: 5005
    protocol: TCP
    name: https
  selector:
    app: knowhere-api
---
apiVersion: v1
kind: Service
metadata:
  name: knowhere-web
  namespace: ${NAMESPACE}
  labels:
    app: knowhere-web
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-id: "${WEB_SLB_ID}"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-force-override-listeners: "false"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 443
    targetPort: 3000
    protocol: TCP
    name: https
  selector:
    app: knowhere-web
---
apiVersion: v1
kind: Service
metadata:
  name: knowhere-worker
  namespace: ${NAMESPACE}
  labels:
    app: knowhere-worker
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: knowhere-worker
